--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "next dev"
+        "dev": "next dev",
+        "start": "next start",
+        "build": "next build",
+        "export": "next export"
     },
     "keywords": [],
     "author": "",
