--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@contentful/rich-text-html-renderer": "^13.4.0",
+        "@contentful/rich-text-react-renderer": "^13.4.0",
+        "@contentful/rich-text-types": "^14.1.0",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "contentful": "^7.14.4",
