--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
         "bootstrap": "^4.4.1",
         "contentful": "^7.14.4",
         "disqus-react": "^1.0.8",
-        "next": "^9.3.6",
+        "next": "^9.4.1",
         "react": "^16.13.1",
+        "react-adsense": "^0.1.0",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "react-markdown": "^4.3.1",
