--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^16.13.1",
         "react-adsense": "^0.1.0",
         "react-dom": "^16.13.1",
+        "react-google-ads": "^1.0.5",
         "react-icons": "^3.10.0",
         "react-markdown": "^4.3.1",
         "react-share": "^4.1.0",
