--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "disqus-react": "^1.0.8",
         "next": "^9.3.6",
         "react": "^16.13.1",
+        "react-adsense": "^0.1.0",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "react-markdown": "^4.3.1",
