--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "react-adsense": "^0.1.0",
         "react-dom": "^16.13.1",
         "react-google-ads": "^1.0.5",
+        "react-highlight": "^0.12.0",
         "react-icons": "^3.10.0",
         "react-markdown": "^4.3.1",
         "react-share": "^4.1.0",
+        "remarkable": "^2.0.0",
         "styled-components": "^5.1.0"
     },
     "devDependencies": {
