--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "bracketSpacing": true,
-  "tabWidth": 4
+    "semi": true,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "tabWidth": 4,
+    "printWidth": 120
 }
