--- a/package.json
+++ b/package.json
@@ -15,29 +15,38 @@
     "license": "ISC",
     "dependencies": {
         "@contentful/rich-text-html-renderer": "^14.1.2",
+        "@tailwindcss/postcss7-compat": "^2.0.3",
+        "autoprefixer": "^9.8.6",
         "axios": "^0.21.1",
         "bootstrap": "^4.4.1",
         "contentful": "^7.14.4",
         "date-fns": "^2.17.0",
         "disqus-react": "^1.0.8",
+        "dracula-prism": "^1.2.1",
+        "gray-matter": "^4.0.2",
         "next": "^9.4.1",
         "nextjs-progressbar": "0.0.7",
+        "postcss": "^7.0.35",
+        "prismjs": "^1.23.0",
         "react": "^16.13.1",
-        "react-adsense": "^0.1.0",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
-        "react-markdown": "^4.3.1",
         "react-share": "^4.1.0",
-        "styled-components": "^5.1.0"
+        "remark": "^13.0.0",
+        "remark-html": "^13.0.1",
+        "remark-prism": "^1.3.4",
+        "styled-components": "^5.1.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
     },
     "devDependencies": {
-        "@types/node": "^13.13.5",
-        "@types/react": "^16.9.34",
+        "@types/node": "^13.13.42",
+        "@types/react": "^16.14.4",
         "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "babel-plugin-styled-components": "^1.10.7",
-        "eslint": "^7.0.0",
+        "@types/prismjs": "^1.16.2",
+        "eslint": "^7.20.0",
         "eslint-plugin-react": "^7.19.0",
         "typescript": "^3.8.3"
     }
