--- a/package.json
+++ b/package.json
@@ -14,40 +14,35 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@contentful/rich-text-html-renderer": "^14.1.2",
-        "@tailwindcss/postcss7-compat": "^2.0.3",
         "autoprefixer": "^9.8.6",
         "axios": "^0.21.1",
         "bootstrap": "^4.4.1",
-        "contentful": "^7.14.4",
-        "date-fns": "^2.17.0",
+        "date-fns": "^2.20.1",
         "disqus-react": "^1.0.8",
         "dracula-prism": "^1.2.1",
         "gray-matter": "^4.0.2",
         "next": "^9.4.1",
         "nextjs-progressbar": "0.0.7",
-        "postcss": "^7.0.35",
         "prismjs": "^1.23.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
-        "react-share": "^4.1.0",
+        "react-share": "^4.4.0",
         "remark": "^13.0.0",
         "remark-html": "^13.0.1",
-        "remark-prism": "^1.3.4",
-        "styled-components": "^5.1.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
+        "remark-prism": "^1.3.5",
+        "styled-components": "^5.2.3"
     },
     "devDependencies": {
-        "@types/node": "^13.13.42",
-        "@types/react": "^16.14.4",
-        "@types/styled-components": "^5.1.0",
+        "@types/node": "^13.13.48",
+        "@types/prismjs": "^1.16.5",
+        "@types/react": "^16.14.5",
+        "@types/styled-components": "^5.1.9",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "babel-plugin-styled-components": "^1.10.7",
-        "@types/prismjs": "^1.16.2",
-        "eslint": "^7.20.0",
-        "eslint-plugin-react": "^7.19.0",
+        "eslint": "^7.24.0",
+        "eslint-plugin-react": "^7.23.2",
         "typescript": "^3.8.3"
     }
 }
