--- a/package.json
+++ b/package.json
@@ -15,34 +15,35 @@
     "license": "ISC",
     "dependencies": {
         "autoprefixer": "^9.8.6",
-        "axios": "^0.21.1",
+        "axios": "^1.3.5",
         "bootstrap": "^4.4.1",
-        "date-fns": "^2.23.0",
+        "date-fns": "^2.29.3",
         "disqus-react": "^1.1.1",
         "dracula-prism": "^1.2.1",
+        "eslint-config-next": "^13.3.0",
         "gray-matter": "^4.0.3",
-        "next": "^9.4.1",
-        "nextjs-progressbar": "0.0.7",
+        "next": "^13.3.0",
+        "nextjs-progressbar": "^0.0.16",
         "prismjs": "^1.27.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^3.10.0",
         "react-share": "^4.4.0",
-        "remark": "^13.0.0",
-        "remark-html": "^13.0.2",
+        "remark": "^14.0.2",
+        "remark-html": "^15.0.2",
         "remark-prism": "^1.3.6",
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
-        "@types/node": "^13.13.52",
+        "@types/node": "^18.15.11",
         "@types/prismjs": "^1.16.6",
-        "@types/react": "^16.14.13",
+        "@types/react": "^18.0.34",
         "@types/styled-components": "^5.1.12",
         "@typescript-eslint/eslint-plugin": "^2.33.0",
         "@typescript-eslint/parser": "^2.33.0",
         "babel-plugin-styled-components": "^1.13.2",
         "eslint": "^7.32.0",
         "eslint-plugin-react": "^7.24.0",
-        "typescript": "^3.9.10"
+        "typescript": "^5.0.4"
     }
 }
