--- a/package.json
+++ b/package.json
@@ -22,16 +22,14 @@
         "dracula-prism": "^1.2.1",
         "eslint-config-next": "^13.3.0",
         "gray-matter": "^4.0.3",
+        "micromark": "^3.1.0",
         "next": "^13.3.0",
         "nextjs-progressbar": "^0.0.16",
-        "prismjs": "^1.27.0",
+        "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^3.10.0",
         "react-share": "^4.4.0",
-        "remark": "^14.0.2",
-        "remark-html": "^15.0.2",
-        "remark-prism": "^1.3.6",
         "styled-components": "^5.3.0"
     },
     "devDependencies": {
@@ -44,6 +42,7 @@
         "babel-plugin-styled-components": "^1.13.2",
         "eslint": "^7.32.0",
         "eslint-plugin-react": "^7.24.0",
-        "typescript": "^5.0.4"
+        "typescript": "^5.0.4",
+        "unified": "^10.1.2"
     }
 }
