--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
         "eslint-config-next": "^13.3.0",
         "gray-matter": "^4.0.3",
         "micromark": "^3.1.0",
+        "micromark-extension-gfm": "^2.0.1",
+        "micromark-extension-mdx": "^1.0.0",
         "next": "^13.3.0",
         "nextjs-progressbar": "^0.0.16",
         "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-icons": "^3.10.0",
         "react-share": "^4.4.0",
         "styled-components": "^5.3.0"
