--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "autoprefixer": "^9.8.6",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.3.5",
         "bootstrap": "^4.4.1",
         "date-fns": "^2.29.3",
@@ -45,6 +45,8 @@
         "babel-plugin-styled-components": "^1.13.2",
         "eslint": "^7.32.0",
         "eslint-plugin-react": "^7.32.2",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.3.1",
         "typescript": "^5.0.4",
         "unified": "^10.1.2"
     }
